--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <li> <a href="{{ url_for('main.index')}}">Home</a></li>
         <li> <a href="{{ url_for('auth.login')}}">Login</a></li>
         <li> <a href="{{ url_for('auth.register')}}">Register</a></li>
+        <li> <a href="{{ url_for('auth.logout') }}">Logout</a></li>
       </ul>
     </nav>
     {% block content %}
