--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,34 @@
 {% extends 'base.html' %}
 
 {% block title %}Login{% endblock %}
+
+{% block style_imports %}
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='style/login.css')}}">
+{% endblock %}
 {% block content %}
-<h1> Test </h1>
+<div id="content-wrapper">
+  <form method="POST">
+    <div class="form-row-wrapper">
+      <span class="material-symbols-outlined" id="iemail-symbol"> mail </span>
+      <input type="email" name="bemail" class="text-input" id="iemail">
+    </div>
+    <div class="form-row-wrapper">
+      <span class="material-symbols-outlined" id="ipassword-symbol"> lock </span>
+      <input type="password" name="bpassword" class="text-input" id="ipassword">
+    </div>
+    <input type="submit" value="Log In" id="isubmit">
+  </form>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <div class="flashes">
+        <ul>
+          {% for message in messages %}
+          <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+      </div>
+    {% endif %}
+  {% endwith %}
+</div>
 {% endblock %}
