--- a/templates/register.html
+++ b/templates/register.html
@@ -22,5 +22,16 @@
     </div>
     <input type="submit" value="Register" id="isubmit">
   </form>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <div class="flashes">
+        <ul>
+          {% for message in messages %}
+            <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+      </div>
+    {% endif %}
+  {% endwith %}
 </div>
 {% endblock %}
