--- a/templates/room.html
+++ b/templates/room.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+<div>
   <div id='messages'>
 
   </div>
@@ -22,4 +23,7 @@
     <input type="submit" name="bsubmit" value="Send">
   </form>
   <p> {{ user_id }}</p>
+  
+</div>
+  
 {% endblock %}
