--- a/templates/room.html
+++ b/templates/room.html
@@ -2,6 +2,7 @@
 
 {% block style_imports %}
 <link rel="stylesheet" href="{{ url_for('static', filename='style/room.css')}} ">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 {% endblock %}
 {% block script_imports %}
   <script src="//code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -14,15 +15,15 @@
 {% endblock %}
 
 {% block content %}
-<div>
+<div id="content-wrapper">
   <div id='messages'>
 
   </div>
   <form id="sendmsg">
     <input type="text" id="imsginput" name="bmsg" placeholder="message" >
-    <input type="submit" name="bsubmit" value="Send">
+    <button type="submit" name="bsubmit" id="isubmit"><span class="material-symbols-outlined">send</span></button>
   </form>
-  <p> {{ user_id }}</p>
+  <!-- <p> {{ user_id }}</p> -->
   
 </div>
   
