--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,19 @@
 {% extends 'base.html' %}
+
+{% block style_imports %}
+<link rel="stylesheet" href="{{url_for('static', filename='style/index.css')}}">
+{% endblock %}
+
 {% block content %}
-  <h1>This is webSocket client</h1>
-  <ul>
-  {% for room in rooms %}
-    <li><a href="{{ url_for('room.room', id=room) }}">Room {{ room }}</a></li>
-  {% endfor %}
-  </ul>
-  <form method="POST">
-    <input type="submit" name="bcreateroom" value="Create New Room">
-  </form>
+  <h1 id="main-title">This is webSocket client</h1>
+  <div id="choose-room">
+    <ul>
+    {% for room in rooms %}
+      <li><a id="room-button" href="{{ url_for('room.room', id=room) }}">Room {{ room }}</a></li>
+    {% endfor %}
+    </ul>
+    <form method="POST">
+      <input id="isubmit" type="submit" name="bcreateroom" value="Create New Room">
+    </form>
+  </div>
 {% endblock %}
